@@ -4,6 +4,8 @@ import interface_adapters.search.SearchController;
 import interface_adapters.search.SearchViewModel;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 import entities.*;
@@ -46,7 +48,7 @@ public class SearchView extends JPanel implements ActionListener, PropertyChange
                 new JLabel("Keywords:"), keywordInputField);
 
         inputPanel.add(keywordInfo);
-        JLabel label = new JLabel();
+        JPanel panelPictures = new JPanel();
         // Panel for action buttons
         final JPanel buttons = new JPanel();
         searchButton = new JButton("Search");
@@ -54,21 +56,31 @@ public class SearchView extends JPanel implements ActionListener, PropertyChange
         searchButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 String searchword = keywordInputField.getText();
-                List<Artwork> all = searchArtwork(searchword);
+                List<Artwork> all = searchArtwork(searchword, "Artist");
                 StringBuilder artworks = new StringBuilder();
                 for (Artwork art: all) {
-                    artworks.append(art.getTitle());
+                    artworks.append(art.getTitle() + "\n");
                     try {
-                        ImageIcon imageIcon = new ImageIcon(new URL(art.getImageUrl())); // load the image to a imageIcon
+                        URI newuri = new URI(art.getImageUrl());
+                        // System.out.println(newuri);
+                        ImageIcon imageIcon;
+                        if (newuri.isAbsolute()) {
+                            imageIcon = new ImageIcon(newuri.toURL());
+                        } else {
+                            imageIcon = new ImageIcon(art.getImageUrl());
+                        } // load the image to a imageIcon
                         Image image = imageIcon.getImage(); // transform it
                         Image newimg = image.getScaledInstance(200, 200,  java.awt.Image.SCALE_SMOOTH); // scale it the smooth way
                         imageIcon = new ImageIcon(newimg);  // transform it back
-                        label.setIcon(imageIcon);
-                    } catch (MalformedURLException ew) {
+                        JLabel imagelabel = new JLabel(imageIcon);
+                        panelPictures.add(imagelabel);
+                    } catch (URISyntaxException | MalformedURLException ew) {
                         throw new RuntimeException(ew);
                     }
                 }
-                 searchResultsArea.setText(artworks.toString());
+                repaint();
+                revalidate();
+                searchResultsArea.setText(artworks.toString());
             }
         });
         buttons.add(searchButton);
@@ -101,7 +113,7 @@ public class SearchView extends JPanel implements ActionListener, PropertyChange
         this.add(buttons);
         this.add(new JLabel("Search Results:"));
         this.add(scrollPane);
-        this.add(label);
+        this.add(panelPictures);
     }
 
 
